--- a/Basics/exercise_2.ipynb
+++ b/Basics/exercise_2.ipynb
@@ -114,7 +114,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "lang",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
